cmake_minimum_required(VERSION 3.29)
project(Data_structure_and_algorithm C)

set(CMAKE_C_STANDARD 11)

add_executable(activity1
    "Assignments/Lecture 1/activity1.c"
)
add_executable(activity2
        "Assignments/Lecture 1/activity2.c"
)
add_executable(activity3
        "Assignments/Lecture 1/activity3.c"
)
add_executable(activity4
        "Assignments/Lecture 1/activity4.c")
add_executable(activity5
        "Assignments/Lecture 1/activity5.c")
add_executable(Assignment1
        "Assignments/Lecture 1/Assignment1.c")
